--- a/app/views/travels/_form.html.erb
+++ b/app/views/travels/_form.html.erb
@@ -8,17 +8,17 @@
 
 
 
-<div class="row">
-  <div class="col-sm-8 col-sm-offset-2">
-    <%= simple_form_for (travel) do |form| %>
-      <%= form.input :title%>
-      <%= form.input :destination%>
-      <%= form.input :duration%>
-      <%= form.input :deal%>
-      <%= form.input :story%>
-      <%= form.input :narrative%>
-      <%= form.file_field :photo%>
-      <%= form.button :submit %>
-    <% end %>
-  </div>
-</div>
+<!--<div class="row">-->
+<!--  <div class="col-sm-8 col-sm-offset-2">-->
+    <%#= simple_form_for (travel) do |form| %>
+      <%#= form.input :title%>
+      <%#= form.input :destination%>
+      <%#= form.input :deal%>
+      <%#= form.input :deal%>
+      <%#= form.input :story%>
+      <%#= form.input :narrative%>
+      <%#= form.file_field :photo%>
+      <%#= form.button :submit %>
+    <%# end %>
+<!--  </div>-->
+<!--</div>-->
