--- a/app/views/travels/_form.html.erb
+++ b/app/views/travels/_form.html.erb
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-sm-8 col-sm-offset-2">
     <%= simple_form_for (travel) do |form| %>
-      <%= form.input (:title, "TITRE")%>
+      <%= form.input :title, label: 'Titre'%>
       <%= form.input :destination%>
       <%= form.input :deal%>
       <%= form.input :deal%>
