--- a/app/views/travels/_form.html.erb
+++ b/app/views/travels/_form.html.erb
@@ -1,12 +1,3 @@
-<!--
-@Author: Ismael Hadj
-@Date:   2018-05-21T14:06:44+02:00
-@Email:  Ismael.hadj13@yahoo.com
-@Last modified by:   Ismael Hadj
-@Last modified time: 2018-05-21T15:20:09+02:00
--->
-
-
 
 <div class="row">
   <div class="col-sm-8 col-sm-offset-2">
@@ -16,7 +7,7 @@
       <%= form.input :duration, label: 'Durée'%>
       <%= form.input :deal, label: 'Bon Plan'%>
       <%= form.input :story, label: 'Histoire'%>
-      <%= form.input :narrative, label: 'Annecdot'%>
+      <%= form.input :narrative, label: 'Annecdote'%>
       <%= form.file_field :photo%>
       <%= form.button :submit %>
     <% end %>
