Un commit by ismael

--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Les voyages de nos abonnés</h1>
+<center><h1>Les voyages de nos abonnés</h1></center>
 
 <%- @travels.each do |travel| -%>
   <section>
