--- a/app/views/travels/new.html.erb
+++ b/app/views/travels/new.html.erb
@@ -1,4 +1,4 @@
 <div class="travels">
-  <h1>Ajout d'un récit</h1>
+  <center><h1>Ajout d'un récit</h1></center>
   <%= render "travels/form", travel: @travel %>
 </div>
