Un commit by ismael

--- a/app/views/travels/_form.html.erb
+++ b/app/views/travels/_form.html.erb
@@ -9,7 +9,7 @@
       <%= form.input :story, label: 'Histoire'%>
       <%= form.input :narrative, label: 'Annecdote'%>
       <%= form.file_field :photo%>
-      <%= form.button :submit %>
+      <%= form.button :submit , label: 'Créer un voyage%>
     <% end %>
   </div>
 </div>
