--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="collapse navbar-collapse" style="background-color: #000">
+<div class="collapse navbar-collapse" style="background-color: #000; color: #FFF ">
   <ul class="nav navbar-nav navbar-right">
     <% if user_signed_in? %>
       <li class="dropdown">
