--- a/app/views/shared/_navbar.erb
+++ b/app/views/shared/_navbar.erb
@@ -1,4 +1,9 @@
 <div class="collapse navbar-collapse">
+  <ul class="nav navbar-nav navbar-left">
+    <li>
+      <%= link_to("Acceuil", travel_path) %>
+    </li>
+  </ul>
   <ul class="nav navbar-nav navbar-right">
     <% if user_signed_in? %>
       <li class="dropdown">
