--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse" style="background-color: #000; color: #FFF ">
   <ul class="nav navbar-nav navbar-left">
     <li>
-      <%= link_to("Acceuil", travel_path)  %>
+      <%= link_to("Acceuil", index_path)  %>
     </li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
