--- a/app/views/shared/_navbar.erb
+++ b/app/views/shared/_navbar.erb
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse">
   <ul class="nav navbar-nav navbar-left">
     <li>
-      <%= link_to("Acceuil", _path) %>
+      <%= link_to("Acceuil") %>
     </li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
