Ajustement taille image

--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -2,7 +2,7 @@
 <div class="travels">
   <h1><%= @travel.title %></h1>
 
-  <%= cl_image_tag @travel.photo, width: 800, height: 400, crop: :fill %>
+  <%= cl_image_tag @travel.photo %>
 
   <section class="row travel">
     <div class="col-sm-8">
