Je vais te tuer Ismael

--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -6,7 +6,10 @@
 
   <section class="row travel">
     <div class="col-sm-8">
-      <p>Ville: <%= @travel.title %></p>
+      <p>Ville: <%= @travel.destination %></p>
+      <p>Durée: <%= @travel.duration %></p>
+      <p>Mon Histoire: <%= @travel.story %></p>
+      <p>Mes Annecdotes: <%= @travel.narrative %></p>
     </div>
   </section>
 
